--- a/src/ProductItem/ProductItem.css
+++ b/src/ProductItem/ProductItem.css
@@ -24,3 +24,25 @@
     width: 200px;
     margin: auto;
 }
+
+.VariantsSelectors .Select-menu-outer {
+    z-index: 400;
+}
+
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
